restructure the application files

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 SECRET_KEY = '248fb9a5bdffa13c0bc136504ebf75c2'
-SQLALCHEMY_DATABASE_URI = 'sqlite:///site.db'
+SQLALCHEMY_DATABASE_URI_SQLITE = 'sqlite:///site.db'
+SQLALCHEMY_DATABASE_URI_MYSQL = 'mysql+pymysql://root:@localhost/taqwaems'
