--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,27 @@
-alembic==1.8.1
-bcrypt==3.2.0
-blinker==1.5
-cffi==1.15.1
-click==8.1.3
-colorama==0.4.5
-dnspython==2.1.0
-email-validator==1.1.3
-Flask==2.0.1
-Flask-Bcrypt==0.7.1
-Flask-Login==0.5.0
-Flask-Mail==0.9.1
-Flask-Migrate==3.0.0
-Flask-SQLAlchemy==2.5.1
-Flask-WTF==0.15.1
-greenlet==1.1.1
-idna==3.2
-itsdangerous==2.0.1
-Jinja2==3.0.1
-Mako==1.2.3
-MarkupSafe==2.0.1
-pycparser==2.20
-six==1.16.0
-SQLAlchemy==1.4.23
-Werkzeug==2.0.1
-WTForms==2.3.3
+alembic==1.13.2
+bcrypt==4.2.0
+blinker==1.8.2
+click==8.1.7
+colorama==0.4.6
+dnspython==2.6.1
+email_validator==2.2.0
+Flask==3.0.3
+Flask-Bcrypt==1.0.1
+Flask-Email==1.4.4
+Flask-Login==0.6.3
+Flask-Mail==0.10.0
+Flask-Migrate==4.0.7
+Flask-SQLAlchemy==3.1.1
+Flask-WTF==1.2.1
+greenlet==3.0.3
+idna==3.8
+itsdangerous==2.2.0
+Jinja2==3.1.4
+Mako==1.3.5
+MarkupSafe==2.1.5
+PyMySQL==1.1.1
+python-dotenv==1.0.1
+SQLAlchemy==2.0.34
+typing_extensions==4.12.2
+Werkzeug==3.0.4
+WTForms==3.1.2
